<resources>
    <string name="app_name">NEWS FEEDS APP</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_user_name">Tony Roshdy</string>
    <string name="label_explore">Explore</string>
    <string name="label_live_chat">Live Chat</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_wish_list">Wish List</string>
    <string name="label_magazine">E-Magazine</string>
    <string name="label_link_dev">Link Development</string>
    <string name="label_loading">loading</string>
</resources>